[gd_scene load_steps=8 format=3 uid="uid://0w7umgh6fkvp"]

[ext_resource type="Script" path="res://CharacterController/SideScroller/Prefabs/FallingBoulder.gd" id="1_jpk2f"]
[ext_resource type="Texture2D" uid="uid://druraaaq3fa2b" path="res://GFX/Level/FallingBoulder.png" id="1_rabja"]

[sub_resource type="CircleShape2D" id="CircleShape2D_g6avd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0p2ne"]

[sub_resource type="Gradient" id="Gradient_1xuuf"]
offsets = PackedFloat32Array(0.42963, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_lwtih"]
gradient = SubResource("Gradient_1xuuf")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ob7ge"]
emission_shape = 3
emission_box_extents = Vector3(25, 3, 0)
particle_flag_rotate_y = true
particle_flag_disable_z = true
spread = 90.47
gravity = Vector3(0, 44, 0)
initial_velocity_min = 5.0
initial_velocity_max = 20.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
radial_accel_min = 6.31
radial_accel_max = 52.63
angle_max = 360.0
scale_min = 0.1
scale_max = 0.2
color_ramp = SubResource("GradientTexture1D_lwtih")
collision_mode = 1
collision_friction = 0.0
collision_bounce = 0.2

[node name="FallingBoulder" type="RigidBody2D"]
contact_monitor = true
can_sleep = false
lock_rotation = true
script = ExtResource("1_jpk2f")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 3
texture = ExtResource("1_rabja")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
scale = Vector2(2.8, 2.8)
shape = SubResource("CircleShape2D_g6avd")

[node name="CheckGround" type="RayCast2D" parent="."]
position = Vector2(0, 30)
target_position = Vector2(0, 10)
collide_with_areas = true

[node name="CheckGround2" type="RayCast2D" parent="."]
position = Vector2(-25, 16)
target_position = Vector2(0, 10)
collide_with_areas = true

[node name="CheckGround3" type="RayCast2D" parent="."]
position = Vector2(20, 21)
target_position = Vector2(0, 10)
collide_with_areas = true

[node name="Bouncetimer" type="Timer" parent="."]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(3, 3)
shape = SubResource("CircleShape2D_0p2ne")

[node name="DropParticle" type="GPUParticles2D" parent="."]
position = Vector2(0, 26)
emitting = false
amount = 18
process_material = SubResource("ParticleProcessMaterial_ob7ge")
texture = ExtResource("1_rabja")
one_shot = true
explosiveness = 0.7

[node name="Life" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Life" to="." method="_on_life_timeout"]
